@startuml

class Proveedor {
    - nif: String
    - nombreSocial: String
    - direccion: String
    - ciudad: String
    - telefono: String
    - correoElectronico: String
    + Proveedor(nif, nombreSocial, direccion, ciudad, telefono, correoElectronico)
}

class EntradaMercancia {
    - codigoEntrada: String
    - cliente: Cliente
    - transportista: Transportista
    - articulos: List<Articulo>
    - fechaEntrada: String
    + EntradaMercancia(codigoEntrada, cliente, transportista, articulos, fechaEntrada)
}

class Articulo {
    - codigoArticulo: String
    - descripcion: String
    - alto: double
    - ancho: double
    - precio: double
    - asegurado: boolean
    + Articulo(codigoArticulo, descripcion, alto, ancho, precio, asegurado)
}

class Cliente {
    - nif: String
    - nombre: String
    - direccion: String
    - telefono: String
    - correoElectronico: String
    - categoria: String
    - proveedores: List<Proveedor>
    - transportistas: List<Transportista>
    - articulos: List<Articulo>
    + Cliente(nif, nombre, direccion, telefono, correoElectronico, categoria, proveedores, transportistas)
}

class Transportista {
    - nif: String
    - nombreSocial: String
    - direccion: String
    - telefono: String
    - correoElectronico: String
    + Transportista(nif, nombreSocial, direccion, telefono, correoElectronico)
}

class Pedido {
    - codigoPedido: String
    - cliente: Cliente
    - destinatario: Destinatario
    - fechaPedido: String
    - articulos: List<Articulo>
    - unidades: List<Integer>
    + Pedido(codigoPedido, cliente, destinatario, fechaPedido, articulos, unidades)
}

class Destinatario {
    - codigoDestinatario: String
    - nombre: String
    - direccion: String
    - telefono: String
    + Destinatario(codigoDestinatario, nombre, direccion, telefono)
}

' Relaciones
Proveedor "1" -- "*" Cliente : "Proveedor de"
EntradaMercancia "1" -- "1" Cliente : "Pertenece a"
EntradaMercancia "1" -- "*" Articulo : "Contiene"
EntradaMercancia "1" -- "1" Transportista : "Servido por"
Cliente "1" -- "*" Proveedor : "Tiene proveedores"
Cliente "1" -- "*" Transportista : "Utiliza transportistas"
Cliente "1" -- "*" Articulo : "Almacena"
Cliente "1" -- "*" Pedido : "Hace pedidos"
Pedido "1" -- "1" Destinatario : "Para destinatario"
Pedido "*" -- "*" Articulo : "Contiene artículos"
Destinatario "1" -- "*" Pedido : "Recibe pedidos"

@enduml
